tests/neg-macros/i7142e/Test_2.scala

object Test {
  macros.test // error
}
